--- a/src/app/app.style.css
+++ b/src/app/app.style.css
@@ -6,3 +6,13 @@ html, body{
 span.active {
   background-color: gray;
 }
+
+.home {
+  margin-top: 50px;
+}
+
+.home-liste {
+  padding-bottom : 5px;
+  padding-top : 5px;
+
+}
