--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,12 +11,18 @@
     </div>
     <div id="navbar" [ngClass]="{collapse: navbarCollapsed}" class="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li *ngIf="eventId">
-          <a [routerLink]="['/users', userId ,'events', eventId]">Gérer ma liste</a>
+        <li *ngIf="userId">
+          <a [routerLink]="['/users', userId ]">Evènements</a>
         </li>
-        <li *ngIf="eventId">
-          <a [routerLink]="['/users', userId ,'gifts', eventId]">Liste cadeaux</a>
+        <li *ngIf="eventId && userId">
+          <a [routerLink]="['/users', userId ,'events', eventId]">Ma liste</a>
         </li>
+        <li *ngIf="eventId && userId">
+          <a [routerLink]="['/users', userId ,'gifts', eventId]">Mes achats</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li *ngIf="eventId && userId"><a>Evènement :: {{eventName}}</a></li>
       </ul>
     </div>
   </div>
