--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li *ngIf="eventId && userId"><a>Evènement :: {{eventName}}</a></li>
+        <li *ngIf="eventId && userId"><a>{{userName}}, Evènement :: {{eventName}}</a></li>
       </ul>
     </div>
   </div>
